--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "lodash": "^4.17.11",
-    "pa11y": "^5.0.4"
+    "pa11y": "^5.0.4",
+    "pug": "^2.0.3"
   }
 }
