--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "lodash": "^4.17.11",
     "pa11y": "^5.0.4",
+    "pa11y-reporter-html": "^1.0.0",
     "pug": "^2.0.3"
   }
 }
