--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "author": "Chialab",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
-    "pa11y": "^5.0.4",
-    "pa11y-reporter-html": "^1.0.0",
-    "pug": "^2.0.3"
+    "pa11y": "github:edoardocavazza/pa11y",
+    "pa11y-reporter-html": "^1.0.0"
   }
 }
