--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "url": "git@gitlab.com:chialab/chia11y.git"
   },
   "scripts": {
-    "start": "node packages/ws/index.js"
+    "start": "node packages/ws/index.js",
+    "build": "npm run build-reporter && npm run build-devtools",
+    "build-reporter": "rollup packages/pa11y-reporter-html/src/reporter.js --name 'Reporter' --file packages/pa11y-reporter-html/lib/reporter.js --config",
+    "build-devtools": "rollup packages/devtools/src/panel/panel.js --name 'Panel' --file packages/devtools/panel/panel.js --config"
   },
   "author": "Chialab",
   "license": "MIT",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "rollup": "^0.66.2",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-string": "^2.0.2"
+  }
 }
