--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@chialab/chia11y-design",
+  "name": "@chialab/chia11y-devtools",
   "version": "1.0.0",
-  "description": "A set of CSS classes for chia11y.",
-  "main": "index.css",
+  "description": "A Chrome devtool implementation of Chia11y.",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git@gitlab.com:chialab/chia11y.git"
