refactor: html reporter for extension

--- a/packages/pa11y-reporter-html/package.json
+++ b/packages/pa11y-reporter-html/package.json
@@ -8,8 +8,5 @@
     "url": "git@gitlab.com:chialab/chia11y.git"
   },
   "author": "Chialab",
-  "license": "MIT",
-  "dependencies": {
-    "lodash": "^4.17.11"
-  }
+  "license": "MIT"
 }
