--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "rollup": "^0.66.2",
     "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-jst": "^1.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-string": "^2.0.2"
   }
