--- a/packages/ws/package.json
+++ b/packages/ws/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
-    "pa11y": "github:edoardocavazza/pa11y"
+    "pa11y": "github:edoardocavazza/pa11y",
+    "@chialab/pa11y-reporter-html": "^1.0.0"
   }
 }
