--- a/packages/devtools/manifest.json
+++ b/packages/devtools/manifest.json
@@ -1,9 +1,15 @@
 {
-  "name": "Chia11y",
+  "name": "Pa11y",
   "manifest_version": 2,
   "version": "1.0",
   "minimum_chrome_version": "10.0",
   "devtools_page": "devtools.html",
+  "browser_action": {
+    "default_icon": "icon.png"
+  },
+  "icons": {
+    "128": "icon.png"
+  },
   "permissions": [
     "<all_urls>",
     "activeTab"
