--- a/packages/devtools/manifest.json
+++ b/packages/devtools/manifest.json
@@ -3,15 +3,28 @@
   "manifest_version": 2,
   "version": "1.0",
   "minimum_chrome_version": "10.0",
-  "devtools_page": "devtools.html",
-  "browser_action": {
-    "default_icon": "icon.png"
-  },
   "icons": {
     "128": "icon.png"
   },
+  "browser_action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": {
+      "128": "icon.png"
+    }
+  },
+  "background": {
+    "scripts": ["background.js"]
+  },
   "permissions": [
-    "<all_urls>",
-    "activeTab"
-  ]
+    "<all_urls>"
+  ],
+  "content_scripts": [{
+    "run_at": "document_start",
+    "matches": [
+      "<all_urls>"
+    ],
+    "js": [
+      "runner.js"
+    ]
+  }]
 }
