--- a/packages/devtools/manifest.json
+++ b/packages/devtools/manifest.json
@@ -4,27 +4,32 @@
   "version": "1.0",
   "minimum_chrome_version": "10.0",
   "icons": {
-    "128": "icon.png"
+    "128": "resources/icon.png"
   },
   "browser_action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "128": "icon.png"
+      "128": "resources/icon.png"
     }
   },
   "background": {
-    "scripts": ["background.js"]
+    "scripts": [
+      "background/background.js"
+    ]
   },
   "permissions": [
     "<all_urls>"
   ],
   "content_scripts": [{
-    "run_at": "document_start",
+    "run_at": "document_end",
     "matches": [
       "<all_urls>"
     ],
     "js": [
-      "runner.js"
+      "vendors/HTMLCS.js",
+      "vendors/pa11y.runner.js",
+      "content/inspector.js",
+      "content/runner.js"
     ]
   }]
 }
