feat: add settings page to extension

--- a/packages/devtools/manifest.json
+++ b/packages/devtools/manifest.json
@@ -12,12 +12,17 @@
       "128": "resources/icon.png"
     }
   },
+  "options_ui": {
+    "page": "settings/settings.html",
+    "open_in_tab": false
+  },
   "background": {
     "scripts": [
       "background/background.js"
     ]
   },
   "permissions": [
-    "<all_urls>"
+    "<all_urls>",
+    "storage"
   ]
 }
