--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@chialab/chia11y-ws",
+  "name": "@chialab/a11ygator-app",
   "version": "1.0.0",
   "description": "A web dashboard for accessibility tests results.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@gitlab.com:chialab/chia11y.git"
+    "url": "git@gitlab.com:chialab/a11ygator.git"
   },
   "author": "Chialab",
   "license": "MIT",
   "dependencies": {
-    "@chialab/chia11y-config": "^1.0.0",
+    "@chialab/a11ygator-config": "^1.0.0",
     "@chialab/pa11y-reporter-html": "^1.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
