--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@chialab/chia11y-config",
+  "name": "@chialab/a11ygator-config",
   "version": "1.0.0",
-  "description": "A base config for chia11y.",
+  "description": "A base config for a11ygator.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@gitlab.com:chialab/chia11y.git"
+    "url": "git@gitlab.com:chialab/a11ygator.git"
   },
   "author": "Chialab",
   "license": "MIT"
