--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a11ygator",
+  "name": "@chialab/a11ygator-app",
   "private": true,
   "version": "1.0.0",
   "description": "A web dashboard for accessibility tests results.",
@@ -9,15 +9,20 @@
     "url": "git@gitlab.com:chialab/a11ygator.git"
   },
   "scripts": {
-    "start": "node packages/app/index.js",
-    "build": "npm run build-reporter",
-    "build-reporter": "rollup packages/pa11y-reporter-html/src/reporter.js --name 'Reporter' --file packages/pa11y-reporter-html/lib/reporter.js --config"
+    "start": "node server.js",
+    "build": "rollup src/reporter/index.js --name 'Reporter' --file dist/reporter.js --config"
   },
   "author": "Chialab",
   "license": "MIT",
   "workspaces": [
     "packages/*"
   ],
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "lodash": "^4.17.11",
+    "pa11y": "github:edoardocavazza/pa11y"
+  },
   "devDependencies": {
     "rollup": "^0.66.2",
     "rollup-plugin-commonjs": "^9.1.8",
