--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "repository": "github:chialab/a11ygator-app",
   "scripts": {
     "start": "node server.js",
-    "build": "rollup src/reporter/index.js --name 'Reporter' --file dist/reporter.js --config"
+    "build": "rollup src/reporter/index.js --name 'Reporter' --file dist/reporter.js --config",
+    "package": "yarn run build && rm gcp.zip && zip -ro gcp.zip package.json dist public screenshots src"
   },
   "author": "Chialab",
   "license": "MIT",
