--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "rollup src/reporter/index.js --name 'Reporter' --file dist/reporter.js --config",
-    "package": "yarn run build && rm gcp.zip && zip -ro gcp.zip package.json dist public screenshots src"
+    "package": "yarn run build && rm gcp.zip && zip -ro gcp.zip package.json dist public screenshots/.gitkeep src"
   },
   "author": "Chialab",
   "license": "MIT",
