--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "rollup src/reporter/index.js --name 'Reporter' --file dist/reporter.js --config",
+    "docker": "docker build -t chialab/a11ygator .",
     "package": "yarn run build && rm gcp.zip && zip -ro gcp.zip package.json dist public screenshots/.gitkeep src"
   },
   "author": "Chialab",
