--- a/templates/root.yml
+++ b/templates/root.yml
@@ -4,9 +4,19 @@ Transform: 'AWS::Serverless-2016-10-31'
 Description: 'Deploy A11ygator Bot application.'
 
 Parameters:
+  ConsumerKey:
+    Type: 'String'
+    Description: 'Consumer key of Twitter application.'
   ConsumerSecret:
     Type: 'String'
     Description: 'Consumer secret of Twitter application.'
+    NoEcho: yes
+  OAuthToken:
+    Type: 'String'
+    Description: 'OAuth Token of Twitter user.'
+  OAuthTokenSecret:
+    Type: 'String'
+    Description: 'Secret of OAuth Token of Twitter user.'
     NoEcho: yes
   ApiLoggingLevel:
     Type: 'String'
@@ -96,7 +106,6 @@ Resources:
       Handler: 'index.handler'
       Role: !GetAtt 'TwitterWebhookRole.Arn'
       Runtime: 'nodejs8.10'
-      Timeout: 30
   TwitterWebhookFunctionPermission:
     Type: 'AWS::Lambda::Permission'
     Properties:
@@ -104,6 +113,56 @@ Resources:
       Action: 'lambda:InvokeFunction'
       Principal: 'apigateway.amazonaws.com'
       SourceArn: !Sub 'arn:${AWS::Partition}:execute-api:${AWS::Region}:${AWS::AccountId}:${Api}/*/POST/webhook/twitter'
+
+  ##########################################
+  ### Function to process queue messages ###
+  ##########################################
+  QueueTriggerRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: 'Allow'
+            Principal:
+              Service: 'lambda.amazonaws.com'
+            Action: 'sts:AssumeRole'
+      ManagedPolicyArns:
+        - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
+      Policies:
+        - PolicyName: 'SQS'
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Sid: 'ConsumeTweets'
+                Effect: 'Allow'
+                Action:
+                  - 'sqs:ReceiveMessage'
+                  - 'sqs:DeleteMessage'
+                  - 'sqs:GetQueueAttributes'
+                Resource: !GetAtt 'TweetsQueue.Arn'
+  QueueTriggerFunction:
+    Type: 'AWS::Lambda::Function'
+    Properties:
+      Code: '../lambda/consumer'
+      Description: !Sub 'Consume tweet queue messages for ${AWS::StackName}.'
+      Environment:
+        Variables:
+          CONSUMER_KEY: !Ref 'ConsumerKey'
+          CONSUMER_SECRET: !Ref 'ConsumerSecret'
+          OAUTH_TOKEN: !Ref 'OAuthToken'
+          OAUTH_TOKEN_SECRET: !Ref 'OAuthTokenSecret'
+      Handler: 'index.handler'
+      Role: !GetAtt 'QueueTriggerRole.Arn'
+      Runtime: 'nodejs8.10'
+      Timeout: 30
+  QueueTriggerFunctionEventSourceMapping:
+    Type: 'AWS::Lambda::EventSourceMapping'
+    Properties:
+      BatchSize: 1
+      Enabled: yes
+      EventSourceArn: !GetAtt 'TweetsQueue.Arn'
+      FunctionName: !GetAtt 'QueueTriggerFunction.Arn'
 
   ###################
   ### API Gateway ###
