--- a/templates/root.yml
+++ b/templates/root.yml
@@ -135,9 +135,40 @@ Resources:
       AttributeDefinitions:
         - AttributeName: 'Id'
           AttributeType: 'S'
+        - AttributeName: 'Timestamp'
+          AttributeType: 'N'
+        - AttributeName: 'Hostname'
+          AttributeType: 'S'
+        - AttributeName: 'Requester'
+          AttributeType: 'S'
+        - AttributeName: 'TweetId'
+          AttributeType: 'S'
       KeySchema:
         - AttributeName: 'Id'
           KeyType: 'HASH'
+      GlobalSecondaryIndexes:
+        - IndexName: 'Hostname'
+          KeySchema:
+            - AttributeName: 'Hostname'
+              KeyType: 'HASH'
+            - AttributeName: 'Timestamp'
+              KeyType: 'RANGE'
+          Projection:
+            ProjectionType: 'ALL'
+        - IndexName: 'Requester'
+          KeySchema:
+            - AttributeName: 'Requester'
+              KeyType: 'HASH'
+            - AttributeName: 'Timestamp'
+              KeyType: 'RANGE'
+          Projection:
+            ProjectionType: 'ALL'
+        - IndexName: 'TweetId'
+          KeySchema:
+            - AttributeName: 'TweetId'
+              KeyType: 'HASH'
+          Projection:
+            ProjectionType: 'KEYS_ONLY'
       BillingMode: 'PAY_PER_REQUEST'
 
   ##########################################
@@ -422,6 +453,14 @@ Resources:
       ManagedPolicyArns:
         - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
       Policies:
+        - PolicyName: 'PreventDuplicates'
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Sid: 'QueryByTweetId'
+                Effect: 'Allow'
+                Action: 'dynamodb:Query'
+                Resource: !Sub '${ReportsTable.Arn}/index/TweetId'
         - PolicyName: 'RequestReport'
           PolicyDocument:
             Version: '2012-10-17'
