--- a/templates/root.yml
+++ b/templates/root.yml
@@ -193,6 +193,53 @@ Resources:
             Effect: 'Allow'
             Resource: !Sub '${ReportsBucket.Arn}/screenshots/*'
 
+  ###########################################
+  ### State machine for scheduled reports ###
+  ###########################################
+  ScheduledReportsRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: 'Allow'
+            Principal:
+              Service: 'states.amazonaws.com'
+            Action: 'sts:AssumeRole'
+      Policies:
+        - PolicyName: 'EnqueueReport'
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Sid: 'EnqueueRequest'
+                Effect: 'Allow'
+                Action: 'sqs:SendMessage'
+                Resource: !GetAtt 'ReportsQueue.Arn'
+  ScheduledReportsStateMachine:
+    Type: 'AWS::StepFunctions::StateMachine'
+    Properties:
+      RoleArn: !GetAtt 'ScheduledReportsRole.Arn'
+      DefinitionString: !Sub |-
+        {
+          "StartAt": "WaitUntil",
+          "States": {
+            "WaitUntil": {
+              "Type": "Wait",
+              "TimestampPath": "$.start_time",
+              "Next": "EnqueueRequest"
+            },
+            "EnqueueRequest": {
+              "Type": "Task",
+              "Resource": "arn:aws:states:::sqs:sendMessage",
+              "Parameters": {
+                "QueueUrl": "${ReportsQueue}",
+                "MessageBody.$": "$.message"
+              },
+              "End": true
+            }
+          }
+        }
+
   #####################################
   ### Queue for reports to generate ###
   #####################################
