--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "aws-sdk": "^2.441.0",
+    "aws4": "^1.8.0",
     "chrome-aws-lambda": "^1.14.0",
+    "inquirer": "^6.3.1",
+    "inquirer-datepicker-prompt": "^0.4.2",
     "pa11y": "github:edoardocavazza/pa11y",
     "puppeteer": "^1.14.0",
     "twit": "^2.2.11",
