chore: update `.env.sample`

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
-export WEBHOOK_URL=""
+A11YGATOR_STACK_NAME=""
 
-export CONSUMER_KEY=""
-export CONSUMER_SECRET=""
+A11YGATOR_CONSUMER_KEY=""
+A11YGATOR_CONSUMER_SECRET=""
 
-export OAUTH_TOKEN=""
-export OAUTH_TOKEN_SECRET=""
+A11YGATOR_OAUTH_TOKEN=""
+A11YGATOR_OAUTH_TOKEN_SECRET=""
