feat: now mention twitter account if user has inputed one

--- a/templates/root.yml
+++ b/templates/root.yml
@@ -915,6 +915,8 @@ Resources:
                 url:
                   type: 'string'
                   format: 'url'
+                mention:
+                  type: 'string'
                 schedule:
                   type: 'string'
                   format: 'date-time'
