--- a/templates/root.yml
+++ b/templates/root.yml
@@ -465,6 +465,65 @@ Resources:
       Principal: 'apigateway.amazonaws.com'
       SourceArn: !Sub 'arn:${AWS::Partition}:execute-api:${AWS::Region}:${AWS::AccountId}:${Api}/*/GET/reports/*'
 
+  ############################################
+  ### Function to delete generated reports ###
+  ############################################
+  ReportDeleteRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: 'Allow'
+            Principal:
+              Service: 'lambda.amazonaws.com'
+            Action: 'sts:AssumeRole'
+      ManagedPolicyArns:
+        - 'arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
+      Policies:
+        - PolicyName: 'Reports'
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Sid: 'GetAndDeleteInfo'
+                Effect: 'Allow'
+                Action:
+                  - 'dynamodb:GetItem'
+                  - 'dynamodb:DeleteItem'
+                Resource: !GetAtt 'ReportsTable.Arn'
+              - Sid: 'DeleteReportData'
+                Effect: 'Allow'
+                Action: 's3:DeleteObject'
+                Resource: !Sub '${ReportsBucket.Arn}/reports/*'
+              - Sid: 'ListScheduledRequests'
+                Effect: 'Allow'
+                Action: 'states:ListExecutions'
+                Resource: !Ref 'ScheduledReportsStateMachine'
+              - Sid: 'AbortScheduledRequest'
+                Effect: 'Allow'
+                Action: 'states:StopExecution'
+                Resource: '*'
+  ReportDeleteFunction:
+    Type: 'AWS::Lambda::Function'
+    Properties:
+      Code: '../lambda/report-delete'
+      Description: !Sub 'Handle report delete requests for ${AWS::StackName}.'
+      Environment:
+        Variables:
+          REPORTS_TABLE: !Ref 'ReportsTable'
+          S3_BUCKET: !Ref 'ReportsBucket'
+          SCHEDULED_REPORTS_STATE_MACHINE: !Ref 'ScheduledReportsStateMachine'
+      Handler: 'index.handler'
+      Role: !GetAtt 'ReportDeleteRole.Arn'
+      Runtime: 'nodejs10.x'
+  ReportDeleteFunctionPermission:
+    Type: 'AWS::Lambda::Permission'
+    Properties:
+      FunctionName: !GetAtt 'ReportDeleteFunction.Arn'
+      Action: 'lambda:InvokeFunction'
+      Principal: 'apigateway.amazonaws.com'
+      SourceArn: !Sub 'arn:${AWS::Partition}:execute-api:${AWS::Region}:${AWS::AccountId}:${Api}/*/DELETE/reports/*'
+
   #######################################################
   ### Function to schedule report generation requests ###
   #######################################################
@@ -816,6 +875,27 @@ Resources:
                 type: 'aws_proxy'
                 httpMethod: 'POST'
                 uri: !Sub 'arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ReportViewFunction.Arn}/invocations'
+            delete:
+              description: 'Delete report.'
+              security:
+                - sigv4: []
+              x-amazon-apigateway-request-validator: 'all'
+              parameters:
+                - in: 'path'
+                  name: 'id'
+                  schema:
+                    type: 'string'
+                  description: 'Report ID.'
+                  required: true
+              responses:
+                '204':
+                  description: 'Report deleted.'
+                '423':
+                  description: 'Report could not be deleted because it is being generated right now.'
+              x-amazon-apigateway-integration:
+                type: 'aws_proxy'
+                httpMethod: 'POST'
+                uri: !Sub 'arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${ReportDeleteFunction.Arn}/invocations'
           /schedules:
             get:
               description: 'List scheduled reports.'
